force-app/main/default/objects/xsms__Incoming_SMS_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>xsms__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provide campaign if incoming message is to be associated with campaign members.</description>
        <inlineHelpText>Provide campaign if incoming message is to be associated with campaign members.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Incoming SMS Configuration</relationshipLabel>
        <relationshipName>Incoming_SMS_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xsms__Description__c</fullName>
        <inlineHelpText>Description Information.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xsms__Is_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if incoming message is to associated with a case. Please note if no existing case is found then system would automatically create a case and associate message with case else if multiple cases are found then message would be associated to most recent case.</description>
        <inlineHelpText>Check if incoming message is to associated with a case.If no existing case is found then system would automatically create a case and associate message with case else if multiple cases are found then message would be associated to most recent case.</inlineHelpText>
        <label>Is Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xsms__Keyword__c</fullName>
        <description>predefined keyword for incoming message</description>
        <inlineHelpText>predefined keyword for incoming message</inlineHelpText>
        <label>Keyword</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Option__c</fullName>
        <description>&quot;Option&quot; to identify association of this message</description>
        <inlineHelpText>&quot;Option&quot; to identify association of this message</inlineHelpText>
        <label>Option</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xsms__Who__c</fullName>
        <description>Identify what to update (Lead/Contact) with incoming message information</description>
        <inlineHelpText>Identify what to update (Lead/Contact) with incoming message information</inlineHelpText>
        <label>Who</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                    <label>Lead</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incoming SMS Configuration</label>
    <listViews>
        <fullName>xsms__All</fullName>
        <columns>NAME</columns>
        <columns>xsms__Keyword__c</columns>
        <columns>xsms__Option__c</columns>
        <columns>xsms__Who__c</columns>
        <columns>xsms__Campaign__c</columns>
        <columns>xsms__Is_Case__c</columns>
        <columns>xsms__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>X-{0000}</displayFormat>
        <label>Incoming SMS Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incoming SMS Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>xsms__Incoming_Configuration_for_Case</fullName>
        <active>true</active>
        <description>If &quot;Is Case&quot; is selected then Campaign should be null.</description>
        <errorConditionFormula>IF(
         AND(
                   xsms__Is_Case__c == true,
                    xsms__Campaign__c != null
                ),
          true,
          false
)</errorConditionFormula>
        <errorDisplayField>xsms__Campaign__c</errorDisplayField>
        <errorMessage>If Incoming SMS is related to Case then Campaign must not be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xsms__Incoming_Configuration_for_Case_Who</fullName>
        <active>true</active>
        <description>If &quot;Is Case&quot; is selected then &quot;Who&quot; must be selected as &quot;Contact&quot;</description>
        <errorConditionFormula>IF(
         AND(
                   xsms__Is_Case__c == true,
                   TEXT(xsms__Who__c) != &apos;Contact&apos;
                ),
          true,
          false
)</errorConditionFormula>
        <errorDisplayField>xsms__Who__c</errorDisplayField>
        <errorMessage>If Incoming SMS is related to Case then Who must be selected as Contact.</errorMessage>
    </validationRules>
</CustomObject>